<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MoreInfoFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/card_vertical_margin"
        app:cardBackgroundColor="@color/primaryLightColor"
        app:cardCornerRadius="@dimen/card_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/llData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textAppearance="?attr/textAppearanceBody2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:drawableLeftCompat="@drawable/ic_github"/>
                    <TextView
                        android:id="@+id/tvAuthor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:textAppearance="?attr/textAppearanceBody2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvName"
                        app:drawableLeftCompat="@drawable/ic_baseline_person_24"/>
                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textAppearance="?attr/textAppearanceBody2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvAuthor"
                        app:drawableLeftCompat="@drawable/ic_baseline_description_24"/>
                    <TextView
                        android:id="@+id/tvHomePage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_page"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:clickable="true"
                        android:focusable="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvDescription"
                        app:drawableLeftCompat="@drawable/ic_baseline_home_24" />
                    <TextView
                        android:id="@+id/tvStars"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stars"
                        android:textAppearance="?attr/textAppearanceBody2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvHomePage"
                        app:drawableLeftCompat="@drawable/ic_baseline_star_24"/>
                    <TextView
                        android:id="@+id/tvForks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/forks"
                        android:textAppearance="?attr/textAppearanceBody2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvStars"
                        app:drawableLeftCompat="@drawable/ic_code_fork"/>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintBottom_toTopOf="@id/llData"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_launcher_background" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
